[package]
name = "jdb_level"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_level"
description = "jdb_level"
keywords = [ ]
categories = [ "database", "data-structures" ]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
either = "1.15.0"
futures = "0.3.31"
futures-core = "0.3.31"
log = "0.4.29"
thiserror = "2.0.17"

[dependencies.jdb_sink]
version = "0.1.0"
path = "../jdb_sink"

[dependencies.jdb_sst_read]
version = "0.1.0"
path = "../jdb_sst_read"

[dependencies.compio]
version = "0.17.0"
features = [ "runtime", "io" ]

[dependencies.jdb_fs]
version = "0.1.1"
path = "../jdb_fs"

[dependencies.jdb_sst]
version = "0.1.0"
path = "../jdb_sst"

[dependencies.jdb_base]
version = "0.1.1"
path = "../jdb_base"

[dependencies.jdb_ckp]
version = "0.1.3"
path = "../jdb_ckp"

[dependencies.jdb_pgm]
version = "0.3.13"
features = [ "key_to_u64" ]

[dev-dependencies]
aok = "0.1.18"
fastrand = "2.3.0"
log = "0.4.29"
log_init = "0.1.34"
proptest = "1.9.0"
static_init = "1.0.4"

[dev-dependencies.jdb_sst_read]
path = "../jdb_sst_read"
version = "0.1.0"

[dev-dependencies.jdb_sst_write]
path = "../jdb_sst_write"
version = "0.1.0"

[dev-dependencies.jdb_mem]
path = "../jdb_mem"
version = "0.1.0"
