[package]
name = "jdb_level"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_level"
description = "jdb_level"

[dependencies]
sorted-vec = "0.8.10"
thiserror = "2.0.17"

[dependencies.xrange]
version = "0.1.5"
path = "../xrange"

[dependencies.jdb_base]
version = "0.1.0"
path = "../jdb_base"

[dependencies.file_lru]
version = "0.1.5"
path = "../file_lru"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
