[package]
name = "jdb_lock"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_lock"
description = "Cross-process file locking for database systems / 数据库系统跨进程文件锁"
keywords = ["file-lock", "database", "wal", "flock", "concurrency"]
categories = ["database", "filesystem", "os::unix-apis"]
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
fd-lock = "4.0.4"
thiserror = "2.0.17"

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"