[package]
name = "jdb_meta"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_meta"
description = "jdb_meta"

[dependencies]
sorted-vec = "0.8.10"
bitcode = "0.6.9"
futures-core = "0.3.31"

[dependencies.xrange]
version = "0.1.3"
path = "../xrange"

[dependencies.jdb_base]
version = "0.1.0"
path = "../jdb_base"

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
