[package]
name = "jdb_page"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_page"
description = "jdb_page"
keywords = [ ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
papaya = "0.2.3"
parking_lot = "0.12.5"
thiserror = "2"

[dependencies.compio]
version = "0.17.0"
features = [ "runtime", "time" ]

[dependencies.jdb_alloc]
version = "0.1.2"
path = "../jdb_alloc"

[dependencies.jdb_fs]
version = "0.1.2"
path = "../jdb_fs"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"

[dev-dependencies.compio]
version = "0.17.0"
features = [ "runtime" ]
