[package]
name = "jdb_pef"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_pef"
description = "jdb_pef"
keywords = []
categories = []
readme = "README.md"

[features]
default = []
bitcode = ["dep:bitcode"]
bench-jdb = []
bench-sucds = []
bench-all = ["bench-jdb", "bench-sucds"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false

[dependencies]
bitcode = { version = "0.6.9", optional = true }

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
criterion = "0.8.1"
log = "0.4.29"
log_init = "0.1.34"
rand = "0.9.2"
static_init = "1.0.4"
sucds = "0.8.3"
tpe = "0.2.0"
